@@ -24,18 +24,24 @@
  */
 package com.oracle.svm.hosted.jfr;
 
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.RandomAccessFile;
 import java.lang.reflect.Method;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 import org.graalvm.nativeimage.ImageSingletons;
 import org.graalvm.nativeimage.hosted.Feature;
 import org.graalvm.nativeimage.hosted.RuntimeClassInitialization;
+import org.graalvm.nativeimage.hosted.RuntimeReflection;
 
+import com.oracle.svm.core.BuildPhaseProvider;
 import com.oracle.svm.core.feature.AutomaticallyRegisteredFeature;
 import com.oracle.svm.core.feature.InternalFeature;
+import com.oracle.svm.core.fieldvaluetransformer.FieldValueTransformerWithAvailability;
 import com.oracle.svm.core.hub.DynamicHub;
+import com.oracle.svm.core.hub.DynamicHubCompanion;
 import com.oracle.svm.core.hub.DynamicHubSupport;
 import com.oracle.svm.core.jfr.JfrFeature;
 import com.oracle.svm.core.jfr.JfrJavaEvents;
@@ -45,11 +51,14 @@ import com.oracle.svm.core.jfr.traceid.JfrTraceIdMap;
 import com.oracle.svm.core.meta.SharedType;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.FeatureImpl;
-import com.oracle.svm.util.ModuleSupport;
+import com.oracle.svm.hosted.ameta.FieldValueInterceptionSupport;
+import com.oracle.svm.hosted.reflect.ReflectionFeature;
+import com.oracle.svm.util.ReflectionUtil;
 
 import jdk.internal.event.Event;
 import jdk.jfr.internal.JVM;
 import jdk.vm.ci.meta.MetaAccessProvider;
+import sun.nio.ch.FileChannelImpl;
 
 /**
  * Support for Java-level JFR events. This feature is only present if the {@link JfrFeature} is used
@@ -64,15 +73,16 @@ public class JfrEventFeature implements InternalFeature {
 
     @Override
     public List<Class<? extends Feature>> getRequiredFeatures() {
-        return Collections.singletonList(JfrFeature.class);
+        return List.of(JfrFeature.class, ReflectionFeature.class);
     }
 
     @Override
     public void afterRegistration(AfterRegistrationAccess access) {
-        ModuleSupport.accessPackagesToClass(ModuleSupport.Access.OPEN, JfrEventFeature.class, false, "jdk.jfr", "jdk.jfr.events");
-        ModuleSupport.accessPackagesToClass(ModuleSupport.Access.OPEN, JfrFeature.class, false, "jdk.jfr", "jdk.jfr.events");
-        ModuleSupport.accessPackagesToClass(ModuleSupport.Access.OPEN, JfrEventSubstitution.class, false, "jdk.internal.vm.ci", "jdk.vm.ci.hotspot");
-        ModuleSupport.accessPackagesToClass(ModuleSupport.Access.OPEN, JfrEventFeature.class, false, "java.base", "jdk.internal.event");
+        RuntimeReflection.registerFieldLookup(Throwable.class, "jfrTracing");
+        RuntimeReflection.registerFieldLookup(FileInputStream.class, "jfrTracing");
+        RuntimeReflection.registerFieldLookup(FileOutputStream.class, "jfrTracing");
+        RuntimeReflection.registerFieldLookup(FileChannelImpl.class, "jfrTracing");
+        RuntimeReflection.registerFieldLookup(RandomAccessFile.class, "jfrTracing");
     }
 
     @Override
@@ -83,13 +93,31 @@ public class JfrEventFeature implements InternalFeature {
         for (Class<?> eventSubClass : config.findSubclasses(Event.class)) {
             RuntimeClassInitialization.initializeAtBuildTime(eventSubClass.getName());
         }
-        config.registerSubstitutionProcessor(new JfrEventSubstitution(metaAccess));
+        config.registerSubstitutionProcessor(new JfrEventSubstitution(metaAccess, config.getUniverse().getHeapScanner()));
+
+        /*
+         * The value of this field is set later in the beforeCompilation method after analysis
+         * finishes, but only in case jfr is enabled, so we do not add @UnknownObjectField
+         * annotation to it, because it will be null if jfr is disabled.
+         */
+        var configField = ReflectionUtil.lookupField(DynamicHubCompanion.class, "jfrEventConfiguration");
+        FieldValueInterceptionSupport.singleton().registerFieldValueTransformer(configField, new FieldValueTransformerWithAvailability() {
+            @Override
+            public boolean isAvailable() {
+                return BuildPhaseProvider.isHostedUniverseBuilt();
+            }
+
+            @Override
+            public Object transform(Object receiver, Object originalValue) {
+                return originalValue;
+            }
+        });
     }
 
     @Override
     public void beforeCompilation(BeforeCompilationAccess a) {
         // Reserve slot 0 for error-catcher.
-        int mapSize = ImageSingletons.lookup(DynamicHubSupport.class).getMaxTypeId() + 1;
+        int mapSize = DynamicHubSupport.singleton().getMaxTypeId() + 1;
 
         // Create trace-ID map with fixed size.
         ImageSingletons.lookup(JfrTraceIdMap.class).initialize(mapSize);
